# fraycast

./: CMakeLists.txt
.github/workflows/: build-and-release.yml
fraycast-assets/: core.fcfg
include/fraycast/: fraycast_build_details.hpp.in
include/fraycast/global/: global.hpp
include/fraycast/util/argparse/: argparse.hpp
include/tengine/util/cfgparse/: cfg_node.hpp  parser.hpp  serializer.hpp
include/tengine/util/filesystem/: recur_file_by_ext.hpp
include/tengine/util/logger/: filter.hpp  i_logsink.hpp  log_level.hpp  logger.hpp  logger_macros.hpp
include/tengine/util/logger/sinks/: file_sink.hpp  terminal_sink.hpp
src/: main.cpp
src/fraycast/: main.cpp  main_old.cpp
src/tengine/util/cfgparse/: parser.cpp  serializer.cpp
src/tengine/util/logger/: logger.cpp
src/tengine/util/logger/sinks/: file_sink.cpp  terminal_sink.cpp
